--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -165,6 +165,8 @@
       }
     ],
     "no-underscore-dangle": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "jsx-a11y/control-has-associated-label": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
